# foundry-instance-manager

./: .black  .bumpversion.cfg  .changelog.yml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TECHNICAL_DEBT.md  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  test_cli_workflow.sh  test_docker_manager.py  tsconfig.json
.github/workflows/: ci.yml  release.yml  test.yml
config/: asset_processing.yaml
foundry_manager/: __init__.py  asset_manager.py  cli.py  cli_output.py  config.py  docker_manager.py  foundry_instance_manager.py  game_system_manager.py  instance_record.py
scripts/: bump_version.sh  requirements.txt  test_cli_workflow.sh
src/: index.js
src/app/: app.tsx
tests/: test_asset_manager.py  test_cli.py  test_cli_integration.py  test_config.py  test_docker_manager.py  test_instance_manager.py  test_instance_record.py  test_instance_record_manager.py  test_module_manager.py  test_world_manager.py
